# cmake-debug-template

./: .gitignore  CMakeLists.txt  CommonEndpointApi.cpp  CommonEndpointApi.h  Hello.cpp  Hello.h  README.md  build.sh  main.cpp  temp_build.sh  test_server.cert
python/: test.py
src/: CommonEndpointApi.cpp  CommonEndpointApi.h  common_endpoint_api.i  main.cpp  test_server.cert
